--- a/Scripts/VHDL_and_Verilog/Projects/VIVADO/SUCESSFUL PROJECTS/blinking_led_pwm/blinking_led_pwm.runs/impl_3/usage_statistics_webtalk.html
+++ b/Scripts/VHDL_and_Verilog/Projects/VIVADO/SUCESSFUL PROJECTS/blinking_led_pwm/blinking_led_pwm.runs/impl_3/usage_statistics_webtalk.html
@@ -4,13 +4,13 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2405991</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Sun May 24 00:54:27 2020</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Tue Jul  7 18:07:38 2020</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2018.3 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>bde9acea3ea249d7811fedd9f4093033</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>6</TD>
-  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>7b2673de76bb5fbe979c1a2ddc54b925</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>211625759_1777540067_210694501_340</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>1</TD>
+  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>30bd86afcd3e5f4eb93fc846611b2ac0</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>30bd86afcd3e5f4eb93fc846611b2ac0</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>target_device</B></TD><TD>xc7z020</TD>
   <TD BGCOLOR='#DBE5F1'><B>target_family</B></TD><TD>zynq</TD>
@@ -31,152 +31,162 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>vivado_usage</B></TD></TR>
 <TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>gui_handlers</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>addsrcwizard_specify_hdl_netlist_block_design=1</TD>
+<TR ALIGN='LEFT'>   <TD>addrepositoryinfodialog_ok=1</TD>
+   <TD>addsrcwizard_specify_hdl_netlist_block_design=1</TD>
    <TD>addsrcwizard_specify_or_create_constraint_files=1</TD>
-   <TD>basedialog_apply=1</TD>
-   <TD>basedialog_cancel=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>basedialog_ok=95</TD>
-   <TD>basedialog_yes=24</TD>
+   <TD>basedialog_apply=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>basedialog_cancel=3</TD>
+   <TD>basedialog_ok=99</TD>
+   <TD>basedialog_yes=25</TD>
    <TD>closeplanner_yes=2</TD>
-   <TD>cmdmsgdialog_messages=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>cmdmsgdialog_ok=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>cmdmsgdialog_messages=3</TD>
+   <TD>cmdmsgdialog_ok=6</TD>
    <TD>cmdmsgdialog_open_messages_view=2</TD>
    <TD>constraintschooserpanel_add_files=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>coretreetablepanel_core_tree_table=7</TD>
    <TD>createsrcfiledialog_file_name=4</TD>
-</TR><TR ALIGN='LEFT'>   <TD>definemodulesdialog_define_modules_and_specify_io_ports=1</TD>
+   <TD>definemodulesdialog_define_modules_and_specify_io_ports=1</TD>
    <TD>deviceconstraintsview_internal_vref_tree=1</TD>
-   <TD>deviceoptionsview_layer_tree=3</TD>
+</TR><TR ALIGN='LEFT'>   <TD>deviceoptionsview_layer_tree=3</TD>
    <TD>deviceoptionsview_tabbed_pane=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>expreporttreepanel_exp_report_tree_table=3</TD>
+   <TD>expreporttreepanel_exp_report_tree_table=3</TD>
    <TD>expruntreepanel_exp_run_tree_table=8</TD>
-   <TD>filesetpanel_file_set_panel_tree=65</TD>
+</TR><TR ALIGN='LEFT'>   <TD>filesetpanel_file_set_panel_tree=69</TD>
    <TD>filesetpanel_messages=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>flownavigatortreepanel_flow_navigator_tree=72</TD>
-   <TD>fpgachooser_family=2</TD>
-   <TD>fpgachooser_fpga_table=2</TD>
-   <TD>fpgachooser_package=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>gettingstartedview_documentation_and_tutorials=3</TD>
+   <TD>flownavigatortreepanel_flow_navigator_tree=75</TD>
+   <TD>fpgachooser_family=3</TD>
+</TR><TR ALIGN='LEFT'>   <TD>fpgachooser_fpga_table=3</TD>
+   <TD>fpgachooser_package=3</TD>
+   <TD>gettingstartedview_documentation_and_tutorials=3</TD>
    <TD>gettingstartedview_open_example_project=1</TD>
-   <TD>gettingstartedview_open_project=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>gettingstartedview_open_project=1</TD>
    <TD>graphicalview_zoom_fit=23</TD>
-</TR><TR ALIGN='LEFT'>   <TD>graphicalview_zoom_in=12</TD>
+   <TD>graphicalview_zoom_in=12</TD>
    <TD>graphicalview_zoom_out=5</TD>
-   <TD>hardwaretreepanel_hardware_tree_table=5</TD>
+</TR><TR ALIGN='LEFT'>   <TD>hardwaretreepanel_hardware_tree_table=5</TD>
    <TD>hcodeeditor_close=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>hinputhandler_find_text_in_current_file=1</TD>
+   <TD>hinputhandler_find_text_in_current_file=1</TD>
    <TD>hinputhandler_replace_text=14</TD>
-   <TD>hinputhandler_select_all=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>hinputhandler_select_all=3</TD>
    <TD>logpanel_pause_output=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_checkpoint=1</TD>
+   <TD>mainmenumgr_checkpoint=1</TD>
    <TD>mainmenumgr_edit=8</TD>
-   <TD>mainmenumgr_file=22</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_file=24</TD>
    <TD>mainmenumgr_flow=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_ip=1</TD>
-   <TD>mainmenumgr_project=12</TD>
-   <TD>mainmenumgr_text_editor=1</TD>
+   <TD>mainmenumgr_ip=1</TD>
+   <TD>mainmenumgr_project=13</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_text_editor=1</TD>
    <TD>maintoolbarmgr_run=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>mainwintoolbarmgr_select_or_save_window_layout=4</TD>
+   <TD>mainwintoolbarmgr_select_or_save_window_layout=4</TD>
    <TD>messagewithoptiondialog_dont_show_this_dialog_again=1</TD>
-   <TD>msgtreepanel_message_severity=3</TD>
+</TR><TR ALIGN='LEFT'>   <TD>msgtreepanel_message_severity=3</TD>
    <TD>msgtreepanel_message_view_tree=12</TD>
-</TR><TR ALIGN='LEFT'>   <TD>msgview_warning_messages=3</TD>
+   <TD>msgview_warning_messages=3</TD>
    <TD>navigabletimingreporttab_timing_report_navigation_tree=3</TD>
-   <TD>pacommandnames_add_sources=6</TD>
-   <TD>pacommandnames_auto_connect_target=5</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_auto_update_hier=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_add_sources=6</TD>
+   <TD>pacommandnames_auto_connect_target=6</TD>
+   <TD>pacommandnames_auto_update_hier=1</TD>
    <TD>pacommandnames_bitstream_settings=1</TD>
-   <TD>pacommandnames_close_design=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_close_design=1</TD>
    <TD>pacommandnames_exit=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_goto_netlist_design=1</TD>
+   <TD>pacommandnames_goto_netlist_design=1</TD>
    <TD>pacommandnames_log_window=1</TD>
-   <TD>pacommandnames_message_window=1</TD>
-   <TD>pacommandnames_new_project=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_open_hardware_manager=3</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_message_window=1</TD>
+   <TD>pacommandnames_new_project=4</TD>
+   <TD>pacommandnames_open_hardware_manager=4</TD>
    <TD>pacommandnames_open_project=1</TD>
-   <TD>pacommandnames_reports_window=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_reports_window=1</TD>
    <TD>pacommandnames_run_bitgen=4</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_save_design=1</TD>
+   <TD>pacommandnames_save_design=1</TD>
    <TD>pacommandnames_show_io_nets=2</TD>
-   <TD>pacommandnames_simulation_live_restart=7</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_simulation_live_restart=7</TD>
    <TD>pacommandnames_simulation_live_run=19</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_simulation_run_behavioral=7</TD>
+   <TD>pacommandnames_simulation_run_behavioral=7</TD>
    <TD>pacommandnames_zoom_fit=1</TD>
-   <TD>paviews_code=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>paviews_code=1</TD>
    <TD>paviews_device=4</TD>
-</TR><TR ALIGN='LEFT'>   <TD>paviews_package=1</TD>
-   <TD>paviews_project_summary=10</TD>
-   <TD>paviews_schematic=5</TD>
-   <TD>programdebugtab_open_target=4</TD>
-</TR><TR ALIGN='LEFT'>   <TD>programdebugtab_program_device=11</TD>
+   <TD>paviews_package=1</TD>
+   <TD>paviews_project_summary=12</TD>
+</TR><TR ALIGN='LEFT'>   <TD>paviews_schematic=5</TD>
+   <TD>programdebugtab_open_target=5</TD>
+   <TD>programdebugtab_program_device=12</TD>
    <TD>programdebugtab_refresh_device=2</TD>
-   <TD>programfpgadialog_program=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>programfpgadialog_program=7</TD>
    <TD>programfpgadialog_specify_bitstream_file=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>progressdialog_background=1</TD>
+   <TD>progressdialog_background=1</TD>
    <TD>progressdialog_cancel=3</TD>
-   <TD>projectnamechooser_choose_project_location=1</TD>
-   <TD>projectnamechooser_project_name=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>projecttab_reload=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>projectnamechooser_choose_project_location=1</TD>
+   <TD>projectnamechooser_project_name=3</TD>
+   <TD>projecttab_reload=4</TD>
    <TD>rdicommands_copy=1</TD>
-   <TD>rdicommands_properties=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>rdicommands_properties=2</TD>
    <TD>rdicommands_save_file=12</TD>
-</TR><TR ALIGN='LEFT'>   <TD>rdiviews_waveform_viewer=71</TD>
+   <TD>rdiviews_waveform_viewer=71</TD>
    <TD>removesourcesdialog_also_delete=2</TD>
-   <TD>rtloptionspanel_select_top_module_of_your_design=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>rtloptionspanel_select_top_module_of_your_design=1</TD>
    <TD>saveprojectutils_cancel=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>saveprojectutils_save=24</TD>
+   <TD>saveprojectutils_save=25</TD>
    <TD>selectmenu_highlight=1</TD>
-   <TD>selectmenu_mark=2</TD>
-   <TD>settingsdialog_project_tree=12</TD>
-</TR><TR ALIGN='LEFT'>   <TD>settingsprojectgeneralpage_choose_device_for_your_project=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>selectmenu_mark=2</TD>
+   <TD>settingsdialog_project_tree=18</TD>
+   <TD>settingsprojectgeneralpage_choose_device_for_your_project=1</TD>
    <TD>settingsprojectippage_delete_ip_cache=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>settingsprojectiprepositorypage_add_repository=1</TD>
+   <TD>settingsprojectiprepositorypage_refresh_all=1</TD>
    <TD>signaltreepanel_signal_tree_table=37</TD>
    <TD>simulationliverunforcomp_specify_time_and_units=2</TD>
 </TR><TR ALIGN='LEFT'>   <TD>simulationobjectspanel_simulation_objects_tree_table=4</TD>
    <TD>simulationscopespanel_simulate_scope_table=5</TD>
    <TD>srcchooserpanel_add_hdl_and_netlist_files_to_your_project=3</TD>
-   <TD>srcchooserpanel_create_file=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>srcchooserpanel_target_language=1</TD>
+   <TD>srcchooserpanel_add_sources_from_subdirectories=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>srcchooserpanel_create_file=3</TD>
+   <TD>srcchooserpanel_target_language=1</TD>
    <TD>srcmenu_ip_hierarchy=1</TD>
    <TD>syntheticagettingstartedview_recent_projects=5</TD>
-   <TD>syntheticastatemonitor_cancel=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>syntheticastatemonitor_cancel=1</TD>
+   <TD>systembuilderlayersview_tabbed_pane=3</TD>
+   <TD>systembuildermenu_add_ip=2</TD>
+   <TD>systembuilderview_pinning=4</TD>
 </TR><TR ALIGN='LEFT'>   <TD>taskbanner_close=1</TD>
+   <TD>touchpointsurveydialog_remind_me_later=1</TD>
    <TD>waveformnametree_waveform_name_tree=46</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>java_command_handlers</B></TD></TR>
 <TR ALIGN='LEFT'>   <TD>addsources=7</TD>
-   <TD>autoconnecttarget=5</TD>
+   <TD>autoconnecttarget=6</TD>
    <TD>closedesign=1</TD>
-   <TD>editdelete=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>editproperties=1</TD>
+   <TD>createblockdesign=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>editdelete=4</TD>
+   <TD>editproperties=1</TD>
    <TD>fileexit=1</TD>
-   <TD>launchprogramfpga=7</TD>
-   <TD>newhardwaredashboard=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>newproject=3</TD>
-   <TD>openhardwaremanager=6</TD>
+   <TD>launchprogramfpga=8</TD>
+</TR><TR ALIGN='LEFT'>   <TD>newhardwaredashboard=1</TD>
+   <TD>newproject=4</TD>
+   <TD>openhardwaremanager=7</TD>
    <TD>openproject=2</TD>
-   <TD>openrecenttarget=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>programdevice=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>openrecenttarget=2</TD>
+   <TD>programdevice=1</TD>
    <TD>refreshdevice=2</TD>
-   <TD>runbitgen=28</TD>
-   <TD>runimplementation=5</TD>
-</TR><TR ALIGN='LEFT'>   <TD>runschematic=4</TD>
+   <TD>runbitgen=29</TD>
+</TR><TR ALIGN='LEFT'>   <TD>runimplementation=5</TD>
+   <TD>runschematic=4</TD>
    <TD>runsynthesis=7</TD>
    <TD>savedesign=1</TD>
-   <TD>showview=23</TD>
-</TR><TR ALIGN='LEFT'>   <TD>simulationrestart=7</TD>
+</TR><TR ALIGN='LEFT'>   <TD>showview=23</TD>
+   <TD>simulationrestart=7</TD>
    <TD>simulationrun=7</TD>
    <TD>simulationrunfortime=19</TD>
-   <TD>toolssettings=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>viewlayoutcmd=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>toolssettings=2</TD>
+   <TD>viewlayoutcmd=4</TD>
    <TD>viewtaskimplementation=2</TD>
    <TD>viewtaskrtlanalysis=3</TD>
-   <TD>viewtasksynthesis=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>zoomfit=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>viewtasksynthesis=2</TD>
+   <TD>zoomfit=1</TD>
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=10</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=2</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>project_data</B></TD></TR>
@@ -202,7 +212,7 @@
    <TD>launch_simulation_vcs=0</TD>
 </TR><TR ALIGN='LEFT'>   <TD>launch_simulation_xsim=7</TD>
    <TD>simulator_language=Mixed</TD>
-   <TD>srcsetcount=1</TD>
+   <TD>srcsetcount=2</TD>
    <TD>synthesisstrategy=Vivado Synthesis Defaults</TD>
 </TR><TR ALIGN='LEFT'>   <TD>target_language=Verilog</TD>
    <TD>target_simulator=XSim</TD>
@@ -753,8 +763,8 @@
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>elapsed=00:00:30s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=527.070MB</TD>
-    <TD>memory_peak=867.973MB</TD>
+    <TD>memory_gain=529.852MB</TD>
+    <TD>memory_peak=882.277MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
